--- a/style.css
+++ b/style.css
@@ -402,8 +402,11 @@ h2 {
   box-shadow: 0 1px 4px #161b211a;
 }
 
-#impact-level {
-    max-width: 20px;
+.impact-level {
+    max-width: 130px;
+    white-space: nowrap;  /* Prevent text wrapping */
+    overflow: hidden;     /* Hide overflow */
+    text-overflow: ellipsis;  /* Show ellipsis if the text is too long */
 }
 
 /* end modal style */
